log
Mon Mar 15 14:04:32 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a + b
      ^
exercises.c:16:1: error: expected ‘;’ before ‘}’ token
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 14:04:38 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a + b;
      ^
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 14:04:48 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: request for member ‘a’ in something not a structure or union
    c -> a + b;
      ^~
Compilation failed
Mon Mar 15 14:05:31 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c=a+b;
     ^
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 14:09:55 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
bc944d6
Mon Mar 15 14:27:29 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
0dfa98b
